@startuml

title __RESOURCE's Class Diagram__\n


    namespace om.example.ocp.demoocpchocolatemanager {
      namespace resource {
        class com.example.ocp.demoocpchocolatemanager.resource.ChocolateRequest {
            + ChocolateRequest()
            + ChocolateRequest()
            {static} + builder()
            + equals()
            + getChocolateCategory()
            + getChocolateSelection()
            + hashCode()
            + setChocolateCategory()
            + setChocolateSelection()
            + toString()
            # canEqual()
        }
      }
    }

  


    namespace om.example.ocp.demoocpchocolatemanager {
      namespace resource {
        class com.example.ocp.demoocpchocolatemanager.resource.ChocolateRequest.ChocolateRequestBuilder {
            + build()
            + chocolateCategory()
            + chocolateSelection()
            + toString()
            ~ ChocolateRequestBuilder()
        }
      }
    }

  


    namespace om.example.ocp.demoocpchocolatemanager {
      namespace resource {
        class com.example.ocp.demoocpchocolatemanager.resource.ChocolateResponse {
            + ChocolateResponse()
            + equals()
            + getChocolate()
            + hashCode()
            + setChocolate()
            + toString()
            # canEqual()
        }
      }
    }

  

  com.example.ocp.demoocpchocolatemanager.resource.ChocolateRequest o-- com.example.ocp.demoocpchocolatemanager.model.ChocolateCategory : chocolateCategory
  com.example.ocp.demoocpchocolatemanager.resource.ChocolateRequest o-- com.example.ocp.demoocpchocolatemanager.model.ChocolateSelection : chocolateSelection
  com.example.ocp.demoocpchocolatemanager.resource.ChocolateRequest +-down- com.example.ocp.demoocpchocolatemanager.resource.ChocolateRequest.ChocolateRequestBuilder
  com.example.ocp.demoocpchocolatemanager.resource.ChocolateRequest.ChocolateRequestBuilder o-- com.example.ocp.demoocpchocolatemanager.model.ChocolateCategory : chocolateCategory
  com.example.ocp.demoocpchocolatemanager.resource.ChocolateRequest.ChocolateRequestBuilder o-- com.example.ocp.demoocpchocolatemanager.model.ChocolateSelection : chocolateSelection
  com.example.ocp.demoocpchocolatemanager.resource.ChocolateResponse o-- com.example.ocp.demoocpchocolatemanager.model.Chocolate : chocolate


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
